--- a/albumy/templates/main/_photo_sidebar.html
+++ b/albumy/templates/main/_photo_sidebar.html
@@ -51,6 +51,16 @@
                 </form>
             </div>
         {% endif %}
+        <br>
+        {% if current_user == photo.author %}
+        <form class="inline" method="post"
+                action="{{ url_for('main.generate_tags', photo_id=photo.id) }}">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+            <button type="submit" class="btn btn-outline-primary btn-sm">
+                 Generate Tags
+            </button>
+        </form>
+        {% endif %}
         <div id="tags">
             <p>
                 {% if photo.tags %}
@@ -89,6 +99,17 @@
                 {% endif %}
             </div>
         {% endif %}
+        <div id="description">
+            <p>
+                {% if photo.caption %}
+                <b>
+                    <font size="4" color="#007bff">Alternative Text</font>
+                </b>
+                <br>
+                    {{ photo.caption }}
+                {% endif %}
+            </p>
+        </div>
         {% if current_user.is_authenticated %}
             {% if current_user.is_collecting(photo) %}
                 <form class="inline" method="post"
